# kanjikoto

./: .gitignore  Cargo.toml  Dioxus.toml  README.md
assets/styling/: blog.css
src/: main.rs
src/components/: hint.rs  mod.rs  tags.rs
src/core/: api.rs  drill_point.rs  mod.rs
src/core/backend/: insert_lesson.rs  misc.rs  mod.rs  query_lesson.rs  up.sql
src/core/backend/lesson/: mod.rs
src/core/data/: backend.rs  card.rs  lesson_status.rs  mod.rs  up.sql
src/core/data/db/: mod.rs  prelude.rs
src/views/: answers.rs  home.rs  lesson.rs  mod.rs  navbar.rs  review.rs  start.rs
src/views/lesson/: import_dialog.rs  mod.rs  phrases.rs  tabs.rs  today.rs
src/views/practice/: card.rs  deck.rs  mod.rs
src/views/review/: lesson.rs  mod.rs
