[package]
name = "kanjikoto"
version = "0.1.0"
authors = ["Jeffrey Yu <92849+wehjin@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.4.0"
dioxus = { version = "0.7.1", features = ["router", "fullstack"] }
getrandom = { version = "0.3.4", features = ["wasm_js"], optional = true }
lazy_static = { version = "1.5.0", optional = true }
rand = "0.9.2"
rand_chacha = "0.9.0"
reqwest = "0.12.24"
rusqlite = { version = "0.37.0", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = { version = "2.0.17", optional = true }

[features]
default = []
web = ["dioxus/web", "dep:getrandom"]
desktop = ["dioxus/desktop", "dep:getrandom"]
mobile = ["dioxus/mobile", "dep:getrandom"]
server = ["dioxus/server", "dep:rusqlite", "dep:thiserror", "dep:lazy_static"]

[dev-dependencies]

